[package]
name = "tes3conv_gui"
version = "0.2.0"
edition = "2021"

[dependencies]
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Input_KeyboardAndMouse"
]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

[dependencies.tes3]
git = "https://github.com/Greatness7/tes3"
rev = "95cbc2cad2c574b023da879e308d3f6f6c4c3e04"
default-features = false
features = ["esp", "nightly", "simd", "serde"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Важное изменение для скрытия консоли
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
name = "tes3conv_gui"
path = "src/main.rs"
